# marble

./: .gitignore  .pylintrc  .sourcery.yaml  .sourcery.yaml.orig  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  README_pypi.md  coverage.json  git_hooks_pre_push.sh  marbleCLI.py  marbleGUI.py  releaseVersion.py  requirements-devel.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: coverage.yml  docbuild.yml  mypy.yml  pylint.yml
docs/source/: advanced.rst  conf.py  index.rst  install.rst
pymarble/: __init__.py  binFile_.py  binFile_automaticIdentify.py  binFile_commandLine.py  binFile_inputOutput.py  binFile_util.py  binaryFile.py  cli.py  file.py  fileAutomaticIdentify.py  fileClass.py  fileCommandLine.py  fileInputOutput.py  fileUtil.py  section.py
pymarble/gui/: communicate.py  configurationEditor.py  defaults.py  form.py  formSplit.py  gui.py  metaEditor.py  misc.py  periodicity.py  progressBar.py  rowTool.py  searchTool.py  split.py  style.py  table.py  tableHeader.py  terminologyLookup.py
tests/: testBackend.sh  testExportedFile.py  test_BackendTutorial.py  test_CLI.py  test_emiFile.py  test_mstFile.py  test_mvl08File.py  test_mvlFile05_B.py  test_mvlFileAll.py  test_section.py  tutorial_05mvl.sh  tutorial_08mvl.sh  tutorial_emi.sh  tutorial_idr.sh
tests/defaultSolutions/: tutorial_05mvl.py  tutorial_08mvl.py  tutorial_emi.py  tutorial_idr.py
tests/examples/: 1.mst  Membrane_Repeatability_05.mvl  Membrane_Repeatability_05.mvl.tags  Membrane_Repeatability_05.py  Membrane_Repeatability_08.mvl  Membrane_Repeatability_08.mvl.tags  Membrane_Repeatability_08.py  Membrane_Repeatability_08.txt  N24_8Cyclic_120s_300mN.hap  N24_8Cyclic_120s_300mN.txt  N24_Cyclic_4_300mN.hap  N24_Cyclic_4_300mN.txt  alone.idr
